--- a/src/components/boardContent/boardContent.scss
+++ b/src/components/boardContent/boardContent.scss
@@ -7,20 +7,18 @@
   margin: 0 auto;
 }
 
-
 // fix button
 .filter {
   min-height: 140px;
   &__buttons-wrapper {
     position: relative;
-  }
-  &__button_current {
-    background-color: #fff;
+    display: flex;
+    justify-content: space-between;
   }
 
   &__button {
     color: #1eb7ee;
-    background-color: #73d2f0;
+    background-color: #151616;
     border: none;
     border-radius: 0 60px 0 0;
     color: #fff;
@@ -37,10 +35,86 @@
     width: 55%;
   }
 
+  &__button:before {
+    background: url(https://www.pngkey.com/png/full/138-1382606_icon-airplane-icon-blue-png.png)
+      no-repeat 50%;
+    background-size: contain;
+    content: '';
+    display: block;
+    filter: brightness(500%);
+    height: 30px;
+    left: 285px;
+    position: absolute;
+    top: 16px;
+    width: 30px;
+  }
+
+  &__button:last-child:before {
+    left: 130px;
+    transform: rotate(90deg);
+  }
+
+  &__button_current {
+    color: #1eb7ee;
+    background-color: #fff;
+    font-size: 24px;
+  }
+
   &__button:last-child {
     border-radius: 60px 0 0 0;
     padding: 0 0 0 180px;
     right: 0;
     text-align: start;
   }
+
+  &__date-wrapper {
+    display: flex;
+    height: 140px;
+    padding: 85px 20px 0;
+    width: 1200px;
+  }
+
+  &__date-input-label {
+    margin-right: 30px;
+  }
+
+  &__date-input {
+    background-position: 44% 47%;
+    background-repeat: no-repeat;
+    background-size: 120px 120px;
+    border: none;
+    border-radius: 5px;
+    font-size: 40px;
+    height: 40px;
+    outline: none;
+    width: 40px;
+  }
+
+  &__date-buttons {
+    display: flex;
+    height: 100%;
+    width: 300px;
+  }
+
+  &__date-button {
+    border-bottom: 3px solid #d0d0d0;
+    color: #b8b9b9;
+    cursor: pointer;
+    text-align: center;
+    transition: 0.3s ease-in-out;
+    width: 100px;
+  }
+
+  &__date-button_current {
+    border-bottom: 3px solid #1eb7ee;
+    color: #1eb7ee;
+  }
+}
+
+.table {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  margin: 40px 0 0;
+  min-height: 300px;
 }
