--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -15,6 +15,10 @@
     outline: none;
     padding: 0 20px 0 70px;
     width: 520px;
+    background: url(https://cdn0.iconfinder.com/data/icons/very-basic-2-android-l-lollipop-icon-pack/24/search-512.png)
+      20px center no-repeat;
+    background-size: 29px;
+    background-color: #fff;
   }
 
   &__button {
