--- a/src/components/headerAirport/airportHeader.scss
+++ b/src/components/headerAirport/airportHeader.scss
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  background-color: #1eb7ee;
+  background-color: #3e3e3e;
   box-shadow: 0 6px 12px 0 #0000004d;
   min-height: 92px;
   padding-left: 120px;
@@ -14,7 +14,7 @@
     display: inline-block;
     img {
       width: 100%;
-      max-width: 181px;
+      max-width: 120px;
       height: auto;
       display: block;
     }
