--- a/src/components/adminPanel/components/tableAdmin/tablePanel.scss
+++ b/src/components/adminPanel/components/tableAdmin/tablePanel.scss
@@ -1,4 +1,7 @@
-.custom-box {
-  width: 100%;
-  margin: 0 30px;
+.box-name-posts {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  margin-bottom: 20px;
 }
