fix-airBoard && add-loginAlarm && fix-footer && fix-roles && add-updatePosts

--- a/src/components/adminPanel/components/PostTable/postTable.scss
+++ b/src/components/adminPanel/components/PostTable/postTable.scss
@@ -45,7 +45,8 @@
 }
 
 .ck-content {
-  height: 300px;
+  min-height: 300px;
+  height: auto;
   font-family: 'Lato';
   line-height: 1.6;
   word-break: break-word;
